luopan-201910-無極.ai

--- a/app/index.html
+++ b/app/index.html
@@ -85,25 +85,24 @@
     </div>
 
     <script>
-
         var luopan = new Luopan({
             ele_id: 'luopan',
             src: './images/luopan-201904-無極.png'
         });
 
-        var ui_reset = function (cb) {
+        var ui_reset = function(cb) {
             tenline.reset_tenline();
             luopan.reset_luopan(show_luopan);
             var isFun = typeof cb === 'function';
             if (typeof cb === 'function') cb();
         }
 
-        var show_luopan = function (data) {
+        var show_luopan = function(data) {
             console.log('show_luopan', data);
         }
 
-        window.onresize = function (event) {
-            ui_reset(null);
+        window.onresize = function(event) {
+            //ui_reset(null);
         }
 
         //紫紅藍黑綠
@@ -128,7 +127,7 @@
 
         // }
 
-        var stop_run = function () {
+        var stop_run = function() {
             clearInterval('auto_run');
             console.log('stop_run');
         }
@@ -154,13 +153,13 @@
                 show_line: true,
                 text_line: '隱藏',
             },
-            mounted: function () {
+            mounted: function() {
 
                 //this.dataItems.sort((a, b) => (a.apiURL > b.apiURL) ? 1 : -1) //es6
                 //this.dataItems.sort(function (a, b) { return a.apiName > b.apiName ? 1 : -1; });
 
             },
-            created: function () {
+            created: function() {
 
                 this.showData();
                 //this.dataItems = ;
@@ -170,7 +169,7 @@
             //el methods
             methods: {
 
-                on_rotate: function (event) {
+                on_rotate: function(event) {
 
                     console.log('window.rotate', window.rotate);
 
@@ -178,14 +177,14 @@
                         title: '輸入數字0~359, 轉動羅盤',
                         input: 'number',
                         inputPlaceholder: '270'
-                    }).then(function (data) {
+                    }).then(function(data) {
 
                         var rotate = data.value;
                         console.log('rotate', rotate);
                         if (rotate !== undefined) {
 
-                            ui_reset(function () {
-                                setTimeout(function () {
+                            ui_reset(function() {
+                                setTimeout(function() {
                                     luopan.find_transform({
                                         number: rotate
                                     });
@@ -199,10 +198,10 @@
 
                 },
 
-                on_reset: function (event) {
+                on_reset: function(event) {
 
-                    ui_reset(function () {
-                        setTimeout(function () {
+                    ui_reset(function() {
+                        setTimeout(function() {
                             luopan.find_transform({
                                 number: 360
                             });
@@ -212,7 +211,7 @@
 
                 },
 
-                on_ten: function (event) {
+                on_ten: function(event) {
 
                     if (this.show_line) {
                         this.text_line = '顯示';
@@ -230,7 +229,7 @@
 
                 },
 
-                greet: function (event) {
+                greet: function(event) {
 
                     // `this` 在方法里指向当前 Vue 实例
                     //alert('Hello ' + this.name + '!')
@@ -256,7 +255,7 @@
 
                 },
 
-                showData: function () {
+                showData: function() {
 
                     this.loading = false;
 
