--- a/app/luopan.html
+++ b/app/luopan.html
@@ -3,200 +3,15 @@
 
 <head>
     <title>Luopan</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/luopan.css">
-    <script src="./js/luopan.js"></script>
-
     <script>
-        $(function() {
-
-            tenline.reset_tenline();
-            //luopan.set_src();
-            luopan.reset_luopan();
-
-            //luopan.set_transform(0.035); //修正刻度起始位置
-            window.onresize = function(event) {
-                tenline.reset_tenline();
-                //luopan.set_src();
-                luopan.reset_luopan();
-            }
-
-            //auto_run();
-
-            /*
-            window.setTimeout(function() {
-                stop_run();
-            }, 5000);
-            */
-
-            //alert('init jquery');
-
-            // //取得mouse每次的距離移動數據
-            // var my_mouseX = 0; //初始0
-            // $('body').mousemove(function (e) {
-
-            //     //console.log(e.clientX);
-            //     var mouse_now_X = e.clientX;
-            //     //每次的移動點
-            //     var move_number = 1;
-
-            //     //轉動羅盤
-            //     if (mouse_now_X > my_mouseX) {
-            //         luopan.deg_number -= move_number;
-            //         //luopan.set_transform(move_number);
-            //     } else {
-            //         luopan.deg_number += move_number;
-            //         //luopan.set_transform(move_number);
-            //     }
-            //     //記錄目前座標數據
-            //     my_mouseX = mouse_now_X;
-
-            // }).onmouseover(function (e) {
-            //     var mouse_now_X = e.clientX;
-            //     //記錄目前座標數據
-            //     //my_mouseX = mouse_now_X;
-            // });
-
-        });
-
-        function Luopan(prop) {
-
-            this.src = 'http://res.cloudinary.com/cn27529/image/upload/v1523242966/luopan-02_slkj2y.png';
-            this.w_luopan = window.innerWidth - 20;
-            this.h_luopan = window.innerHeight - 20;
-            this.element_id = prop.element_id;
-            this.deg_number = 0;
-            //alert('new LuoPan');
-
-            this.set_transform = function(number) {
-
-                var deg = 'rotate(' + number + 'deg)';
-                document.querySelector('#' + this.element_id).style.transform = deg;
-                //this.element_obj.css('transform', deg);
-                this.deg_number = number;
-            }
-
-            this.element = function() {
-                return document.querySelector('#' + this.element_id);
-            }
-
-            this.set_src = function() {
-
-                //var luopan = document.querySelector('#' + this.element_id);
-                //luopan.src = this.src;
-
-            }
-
-            this.reset_luopan = function() {
-
-                var luopan = document.querySelector('#' + this.element_id);
-                luopan.src = this.src;
-
-                //var qq = $('#' + this.element_id);
-                //alert(qq.html())
-                //$(luopan).show(1500);
-                //qq.hide()
-
-
-                this.w_luopan = window.innerWidth - 30;
-                this.h_luopan = window.innerHeight - 30;
-
-                var my_width = 0;
-
-                if (this.h_luopan >= this.w_luopan) {
-                    this.h_luopan = this.w_luopan; //高要等於寛
-                    my_width = this.w_luopan;
-                }
-                if (this.w_luopan >= this.h_luopan) {
-                    this.w_luopan = this.h_luopan;
-                }
-
-                var my_left_gap = 0; //修正誤差
-                //取得left要位移的位置
-                var my_left = 0;
-                var my_top = 0;
-                var my_top_gap = 0
-                if (window.innerWidth >= window.innerHeight) {
-                    my_width = window.innerHeight - 30;
-                    my_left = window.innerWidth - window.innerHeight;
-                    my_left_gap = 17;
-                    my_left = (my_left + my_left_gap) / 2;
-                    my_top = 8;
-                }
-
-                if (window.innerWidth <= window.innerHeight) {
-                    my_width = window.innerWidth - 30;
-                    my_left = (window.innerWidth - this.w_luopan);
-                    my_left_gap = 12;
-                    my_left = (my_left - my_left_gap) / 2;
-                    my_top = (window.innerHeight - window.innerWidth);
-                    my_top_gap = 15;
-                    my_top = (my_top + my_top_gap) / 2;
-                }
-
-                luopan.setAttribute('width', my_width + 'px'); //設定寛為營目同高
-                //console.log('my_left:' + my_left);
-
-                var my_style = 'border: 0px solid #000000; position: absolute; z-index: -999; top: ' + my_top +
-                    'px; left: ' + my_left +
-                    'px;';
-
-                //this.h_luopan = this.h_luopan - 50; //要比營目高小一點
-
-                var luopan = document.querySelector('#' + this.element_id);
-                luopan.setAttribute('style', my_style);
-
-                console.log('window.innerWidth=', window.innerWidth);
-                console.log('window.innerHeight=', window.innerHeight);
-                console.log('luopan my_style=', my_style);
-                console.log('w_luopan=', this.w_luopan);
-                console.log('h_luopan=', this.h_luopan);
-
-            }
-
-        }
-
-        var luopan = new Luopan({
-            element_id: 'luopan'
-        });
-
-        var tenline = new TenLine({
-            element_id: 'tensvg',
-            w_id: 'wline',
-            h_id: 'hline',
-            color_code: '#bf00ff'
-        })
-
-        var auto_run = function() {
-
-            window.setInterval(function() {
-                //luopan.set_transform(0.125);
-                luopan.set_transform(0.060);
-            }, 60);
-
-        }
-
-        var stop_run = function() {
-
-            clearInterval(auto_run());
-            console.log('stop_run');
-
+        var on_load = function() {
+            document.location.href = 'index.html';
         }
     </script>
-
 </head>
 
-<body>
-    <svg class="tensvg" id="tensvg">
-        <!--橫線-->
-        <line id="wline" />
-        <!--直線-->
-        <line id="hline" />
-    </svg>
-    <div class="luopan">
-        <img id="luopan" alt="Luopan image">
-    </div>
+<body onload="on_load()">
+
 </body>
 
 </html>
