luopan-201910-now.png

--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
     <script>
         var luopan = new Luopan({
             ele_id: 'luopan',
-            src: './images/luopan-201904-無極.png'
+            src: './images/luopan-201904-now.png'
         });
 
         var ui_reset = function(cb) {
