./app/base64Img.js

--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
         var ui_reset = function(cb) {
 
             Swal.fire({
-                title: '請稍後，羅盤正在加載中',
+                title: '羅盤正在加載中',
                 showCancelButton: false,
                 showConfirmButton: false
             });
