var colors = [#730099, #cc0000, #0044cc, #000000, #006622]

--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,7 @@
             //ui_reset(null);
         }
 
-        //紫紅藍黑綠
+        //紫紅藍黑綠暗紅
         var colors = ['#730099', '#cc0000', '#0044cc', '#000000', '#006622']
 
         var tenline = new TenLine({
